Navbar overlay z-index fix

--- a/themes/blueberry/development/sass/bootstrap/overrides/navbar-blueberry.scss
+++ b/themes/blueberry/development/sass/bootstrap/overrides/navbar-blueberry.scss
@@ -197,7 +197,7 @@ body {
     }
   }
 
-  .fixed-top {
+  &.fixed-top {
     z-index: 9;
   }
 }
